--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -42,6 +42,14 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <script>
+            let debugLogging = true;
+
+            function log(...args) {
+                if (debugLogging) {
+                    console.log(...args);
+                }
+            }
+
             let wordsArray = {{ words|safe }};
             let totalWords = wordsArray.length;
             let topWord = {{ top_word }};
@@ -75,7 +83,7 @@
                 let containerRect = wordsContainer.getBoundingClientRect();
                 let lastVisibleWordIndex = getLastVisibleWord();
                 let visibleWordsNum = lastVisibleWordIndex - topWord + 1;
-                console.log('Visible words:', visibleWordsNum);
+                log('Visible words:', visibleWordsNum);
                 let lastWordElement = document.getElementById('word-' + lastVisibleWordIndex);
 
                 let bottomGapInLines;
@@ -90,7 +98,7 @@
                     lastVisibleWordIndex = getLastVisibleWord(0);
                     visibleWordsNum = lastVisibleWordIndex + 1;
                     fillContainerWithWords(topWord);
-                    console.log('Visible words after re-fill:', visibleWordsNum);
+                    log('Visible words after re-fill:', visibleWordsNum);
                 }
                 return visibleWordsNum === 0 ? 1 : visibleWordsNum;
             }
@@ -122,7 +130,7 @@
                     let viewportTopWord = binarySearchForTopWord(low, high, targetLastWord);
                     fillContainerWithWords(viewportTopWord);
                     if (getLastVisibleWord(viewportTopWord) === targetLastWord) {
-                        console.log('try squeeze more words in the viewport');
+                        log('try squeeze more words in the viewport');
                         for (let i = viewportTopWord; i >= 0; i--) {
                             fillContainerWithWords(i);
                             if (getLastVisibleWord(i) === targetLastWord) {
@@ -135,7 +143,7 @@
                     }
                     else {
                         // If the search did not find the exact match, it couldn'b bee exactly the last
-                        console.log('shift viewport till the target is visible');
+                        log('shift viewport till the target is visible');
                         for (let i = viewportTopWord; i >= 0; i--) {
                             fillContainerWithWords(i);
                             if (getLastVisibleWord(i) >= targetLastWord) {
@@ -152,7 +160,7 @@
             }
 
             function binarySearchForTopWord(low, high, targetLastWord) {
-                console.log('Searching for topWord:', targetLastWord, `between`, low, high);
+                log('Searching for topWord:', targetLastWord, `between`, low, high);
                 while (low < high) {
                     let mid = Math.floor((low + high) / 2);
                     suppressRedraw(wordsContainer);
@@ -160,7 +168,7 @@
                     resumeRedraw(wordsContainer);
 
                     let lastVisibleWord = getLastVisibleWord(mid);
-                    console.log('mid:', mid, 'lastVisibleWord:', lastVisibleWord, 'low:', low, 'high:', high);
+                    log('mid:', mid, 'lastVisibleWord:', lastVisibleWord, 'low:', low, 'high:', high);
 
                     if (lastVisibleWord < targetLastWord) {
                         low = mid + 1;
@@ -174,7 +182,7 @@
             }
 
             function fillContainerWithWords(startWordIndex) {
-                // console.log('Filling words:', wordsArray.slice(0, 10));
+                // log('Filling words:', wordsArray.slice(0, 10));
                 // todo: do not clear container if top word is the same
                 let existingSpans = wordsContainer.getElementsByClassName('word');
                 let existingSpansMap = {};
@@ -255,7 +263,7 @@
                                 resolve(); // Resolve the promise after updating the DOM
                             } else {
                                 console.error('Invalid or missing data in response');
-                                console.log("Response data:", data);
+                                log("Response data:", data);
                                 reject(new Error('Invalid or missing data in response'));
                             }
                         })
