--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -33,6 +33,10 @@
                 white-space: nowrap;
             }
 
+            .word::after {
+                content: ' '; /* This adds a space after each word */
+            }
+
         </style>
     </head>
     <body>
@@ -42,46 +46,27 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <script>
-            let debugLogging = true;
+            let bookId = {{ book.id }};
+            let pageNum = {{  page.number }};
 
+            let wordSpans;
+            let totalWords;
+
+            let topWord;
+            let lastTopWord;
+            let lastAddedWordIndex;
+
+            let debugLogging = true;
             function log(...args) {
                 if (debugLogging) {
                     console.log(...args);
                 }
             }
 
-            let totalWords;
-            let wordSpans;
-            let topWord = {{ top_word }};
-            let pageNum = {{ page.number }};
-            let bookId = {{ book.id }};
-
-            function getLastVisibleWord(filledFromWord) {
-                let lastVisibleWordIndex = filledFromWord !== undefined ? filledFromWord : topWord;
-                let containerRect = wordsContainer.getBoundingClientRect();
-
-                for (let i = lastVisibleWordIndex; i < totalWords; i++) {
-                    let wordId = 'word-' + i;
-                    let wordElement = document.getElementById(wordId);
-
-                    if (wordElement) {
-                        let wordRect = wordElement.getBoundingClientRect();
-                        if (wordRect.bottom <= containerRect.bottom) {
-                            lastVisibleWordIndex = i;
-                        } else {
-                            break; // Exit the loop when the first invisible word is encountered
-                        }
-                    } else {
-                        break; // Exit the loop if the word element does not exist
-                    }
-                }
-                return lastVisibleWordIndex;
-            }
-
             function wordsInViewport() {
                 // Count the number of words that fit in the viewport
                 let containerRect = wordsContainer.getBoundingClientRect();
-                let lastVisibleWordIndex = getLastVisibleWord();
+                let lastVisibleWordIndex = lastAddedWordIndex;
                 let visibleWordsNum = lastVisibleWordIndex - topWord + 1;
                 log('Visible words:', visibleWordsNum);
                 let lastWordElement = document.getElementById('word-' + lastVisibleWordIndex);
@@ -92,12 +77,13 @@
                     let lineHeight = lastWordRect.height;
                     let spaceAtBottom = containerRect.bottom - lastWordRect.bottom;
                     bottomGapInLines = spaceAtBottom / lineHeight;
+                    log('bottomGapInLines:', bottomGapInLines)
                 }
                 if (!lastWordElement || bottomGapInLines > 1.5) {
-                    fillContainerWithWords(0);
-                    lastVisibleWordIndex = getLastVisibleWord(0);
+                    renderWordsContainer(0);
+                    lastVisibleWordIndex = lastAddedWordIndex;
                     visibleWordsNum = lastVisibleWordIndex + 1;
-                    fillContainerWithWords(topWord);
+                    renderWordsContainer(topWord);
                     log('Visible words after re-fill:', visibleWordsNum);
                 }
                 return visibleWordsNum === 0 ? 1 : visibleWordsNum;
@@ -109,16 +95,13 @@
                 if (targetLastWord === undefined) {
                     targetLastWord = topWord - 1;
                 }
-                if (topWord === 0) {
-                    return 0;  // Already at the beginning of the page
-                }
-                let high = topWord - 1;  // topWord changed by fillContainerWithWords so fix it there
+                let high = targetLastWord - 1;  // topWord changed by renderWordsContainer so fix it there
                 suppressRedraw(wordsContainer);
                 try {
                     // heuristic to narrow down the search: go back by 2 viewports number of words
                     let low = Math.max(0, topWord - wordsInViewport() * 2);
-                    fillContainerWithWords(low);
-                    let lastVisibleWord = getLastVisibleWord(low);
+                    renderWordsContainer(low);
+                    let lastVisibleWord = lastAddedWordIndex;
                     if (lastVisibleWord === targetLastWord) {
                         return low; // wild guess was correct
                     }
@@ -128,15 +111,15 @@
                         low = 0;
                     }
                     let viewportTopWord = binarySearchForTopWord(low, high, targetLastWord);
-                    fillContainerWithWords(viewportTopWord);
-                    if (getLastVisibleWord(viewportTopWord) === targetLastWord) {
+                    renderWordsContainer(viewportTopWord);
+                    if (lastAddedWordIndex === targetLastWord) {
                         log('try squeeze more words in the viewport');
                         for (let i = viewportTopWord; i >= 0; i--) {
-                            fillContainerWithWords(i);
-                            if (getLastVisibleWord(i) === targetLastWord) {
+                            renderWordsContainer(i);
+                            if (lastAddedWordIndex === targetLastWord) {
                                 viewportTopWord = i;
                             } else {
-                                fillContainerWithWords(viewportTopWord);
+                                renderWordsContainer(viewportTopWord);
                                 break;
                             }
                         }
@@ -146,11 +129,11 @@
                         // If the search did not find the exact match, it couldn't be exactly the last
                         log('shift viewport till the target is visible');
                         for (let i = viewportTopWord; i >= 0; i--) {
-                            fillContainerWithWords(i);
-                            if (getLastVisibleWord(i) >= targetLastWord) {
+                            renderWordsContainer(i);
+                            if (lastAddedWordIndex >= targetLastWord) {
                                 viewportTopWord = i;
                             } else {
-                                fillContainerWithWords(viewportTopWord);
+                                renderWordsContainer(viewportTopWord);
                                 break;
                             }
                         }
@@ -166,40 +149,86 @@
                 while (low < high) {
                     let mid = Math.floor((low + high) / 2);
                     suppressRedraw(wordsContainer);
-                    fillContainerWithWords(mid);
+                    renderWordsContainer(mid);
                     resumeRedraw(wordsContainer);
 
-                    let lastVisibleWord = getLastVisibleWord(mid);
+                    let lastVisibleWord = lastAddedWordIndex;
                     log('mid:', mid, 'lastVisibleWord:', lastVisibleWord, 'low:', low, 'high:', high);
 
                     if (lastVisibleWord < targetLastWord) {
                         low = mid + 1;
-                    } else if (lastVisibleWord > targetLastWord) {
+                    } else if (lastVisibleWord >= targetLastWord) {
                         high = mid;
-                    } else {
-                        return mid;
                     }
                 }
                 return low;
             }
 
-            function fillContainerWithWords(startWordIndex) {
+            function renderWordsContainer(newTopWord) {
+                if (newTopWord === undefined) {
+                    newTopWord = topWord;
+                }
+                if (lastTopWord !== newTopWord) {
+                    fillWordsContainer(newTopWord);
+                } else {
+                    resizeWordsContainer();
+                }
+            }
+
+            function fillWordsContainer(startWordIndex) {
                 topWord = startWordIndex;
-                // todo: do not clear container if top word is the same
-                wordsContainer.innerHTML = ''; // Clear the container to reorder spans
+                lastTopWord = topWord;
                 let containerRect = wordsContainer.getBoundingClientRect();
+
+                wordsContainer.innerHTML = ''; // Clear the container
+
                 for (let i = startWordIndex; i < wordSpans.length; i++) {
                     wordsContainer.appendChild(wordSpans[i]);
-                    // Check if the word fits fully within the container
-                    // let wordRect = wordSpan.getBoundingClientRect();
-                    // if (wordRect.bottom > containerRect.bottom || wordRect.right > containerRect.right) {
-                        // Word does not fully fit, remove it and stop adding more words
-                    //    wordsContainer.removeChild(wordSpan);
-                    //    break;
-                    //}
-                    wordsContainer.appendChild(document.createTextNode(' ')); // Add a space after the word
+                    let wordRect = wordSpans[i].getBoundingClientRect();
+                    if (wordRect.bottom > containerRect.bottom) {
+                        // Word does not fully fit, remove it
+                        wordsContainer.removeChild(wordSpans[i]);
+                        break;
+                    }
+                    lastAddedWordIndex = i; // Update last added word index
                 }
+                log('fillWordsContainer from', startWordIndex, 'lastAddedWordIndex:', lastAddedWordIndex);
                 htmx.process(wordsContainer);
+            }
+
+            function resizeWordsContainer() {
+                let containerRect = wordsContainer.getBoundingClientRect();
+                let oldLastAddedWordIndex = lastAddedWordIndex;
+
+                // Check if the last word in the container is visible
+                let lastWordRect = wordSpans[lastAddedWordIndex].getBoundingClientRect();
+                if (lastWordRect.bottom <= containerRect.bottom) {
+                    // Add words if the last word is fully visible
+                    for (let i = lastAddedWordIndex + 1; i < wordSpans.length; i++) {
+                        wordsContainer.appendChild(wordSpans[i]);
+                        let wordRect = wordSpans[i].getBoundingClientRect();
+                        if (wordRect.bottom > containerRect.bottom) {
+                            wordsContainer.removeChild(wordSpans[i]);
+                            break;
+                        }
+                        lastAddedWordIndex = i;
+                    }
+                } else {
+                    // Remove words if the last word is not fully visible
+                    while (lastAddedWordIndex > topWord) {
+                        let wordRect = wordSpans[lastAddedWordIndex].getBoundingClientRect();
+                        if (wordRect.bottom > containerRect.bottom) {
+                            wordsContainer.removeChild(wordSpans[lastAddedWordIndex]);
+                            lastAddedWordIndex--;
+                        } else {
+                            break;
+                        }
+                    }
+                }
+                if (oldLastAddedWordIndex !== lastAddedWordIndex) {
+                    log('resizeWordsContainer', lastAddedWordIndex - oldLastAddedWordIndex);
+                    htmx.process(wordsContainer);
+                }
             }
 
             let redrawSuppressCount = 0;
@@ -235,7 +264,7 @@
                             // Update global variables with new data
                             if (data.data) {
                                 totalWords = data.data.words.length;
-                                topWord = data.data.topWord;
+                                lastTopWord = undefined;
                                 pageNum = parseInt(data.data.pageNum);
                                 bookId = data.data.bookId;
 
@@ -250,7 +279,6 @@
                                     return wordSpan;
                                 });
                                 reInitDom();
-                                fillContainerWithWords(topWord);
                                 resolve(); // Resolve the promise after updating the DOM
                             } else {
                                 console.error('Invalid or missing data in response');
@@ -295,22 +323,25 @@
                         return;
                     }
                     await loadPage(pageNum - 1);
-                    topWord = totalWords;  // Set topWord to the end of the page to trigger a search for the beginning of the page
+                    findViewport(totalWords - 1);
+                    reportVieportChange();
+                    return;
                 }
-                findViewport();
+                findViewport(topWord - 1);
                 reportVieportChange();
             }
 
-            function handleNextButtonClick() {
-                let lastWordIndex = getLastVisibleWord();
+            async function handleNextButtonClick() {
+                let lastWordIndex = lastAddedWordIndex;
                 if (lastWordIndex >= totalWords - 1) {
                     // Last word is already visible, load the next page
-                    loadPage(pageNum + 1);
+                    await loadPage(pageNum + 1);
+                    renderWordsContainer(0);
+                    reportVieportChange();
                     return;
                 }
-                topWord = lastWordIndex + 1;
+                renderWordsContainer(lastWordIndex + 1);
                 reportVieportChange();
-                fillContainerWithWords(topWord);
             }
 
             function reInitDom() {
@@ -329,17 +360,19 @@
                 }
 
                 wordsContainer = document.getElementById('words-container');
-
-            // window.addEventListener('resize', function() {
-            //    fillContainerWithWords(topWord);
-            // );
             }
+
             document.addEventListener('DOMContentLoaded', function() {
                 loadPage(pageNum).then(() => {
                     log('Page loaded successfully.');
+                    renderWordsContainer(0);
                 }).catch(error => {
                     console.error('Failed to load page:', error);
                 });
+            });
+
+            window.addEventListener('resize', function() {
+                renderWordsContainer(topWord);
             });
         </script>
 
