--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -41,15 +41,13 @@
     </head>
     <body data-book-id="{{ book.id }}"
           data-page-number="{{ page.number }}"
-          click-word-url="{% url 'word' %}">
+          data-click-word-url="{% url 'word' %}">
 
         {% block content %}{% endblock %}
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-        <script src="{% static 'lexiflux/utils.js' %}"></script>
-        <script src="{% static 'lexiflux/viewport.js' %}"></script>
-        <script src="{% static 'lexiflux/controls.js' %}"></script>
+        <script src="{% static 'lexiflux/bundle.js' %}"></script>
     </body>
 </html>
