--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -1,12 +1,30 @@
 <div id="book" class="d-flex flex-column vh-100">
 
-    <nav class="navbar">
-        <div class="container-fluid d-flex align-items-center justify-content-between">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <!-- Hamburger Button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="mx-3 text-truncate title-container">
-            {{ book.title }}
-        </div>
+            <!-- Navbar content -->
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            &#9776; <!-- Hamburger Icon -->
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                            <!-- Add more dropdown items here if needed -->
+                        </ul>
+                    </li>
+                </ul>
+            </div>
 
+            <div class="mx-3 text-truncate title-container">
+                {{ book.title }}
+            </div>
         </div>
     </nav>
 
