--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -17,6 +17,9 @@
                             {% endfor %}
                         </div>
                     {% endif %}
+                    {% if error_message %}
+                        <div class="alert alert-danger">{{ error_message }}</div>
+                    {% endif %}
 
                     <form method="post" action="{% url 'login' %}" class="mt-3">
                         {% csrf_token %}
