--- a/lexiflux/templates/profile.html
+++ b/lexiflux/templates/profile.html
@@ -12,7 +12,7 @@
                         <p class="form-control-plaintext">{{ user.email }}</p>
                     </div>
                     <!-- Logout Form -->
-                    <form action="{% url 'logout' %}" method="post" hx-post="{% url 'logout' %}" hx-redirect="/">
+                    <form action="{% url 'logout' %}" method="post">
                         {% csrf_token %}
                         <button type="submit" class="btn btn-danger w-100">Logout</button>
                     </form>
