--- a/lexiflux/templates/hamburger.html
+++ b/lexiflux/templates/hamburger.html
@@ -11,7 +11,7 @@
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item {% if current_page == 'profile' %}text-secondary{% endif %}" href="{% url 'profile' %}">Profile</a></li>
                 <li><a class="dropdown-item {% if current_page == 'library' %}text-secondary{% endif %}" href="{% url 'library' %}">Library</a></li>
-                <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'book' %}">Book</a></li>
+                <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'reader' %}">Book</a></li>
             </ul>
         </li>
     </ul>
