--- a/lexiflux/templates/profile.html
+++ b/lexiflux/templates/profile.html
@@ -6,7 +6,7 @@
         <div class="container-fluid">
             {% include 'hamburger.html' with current_page='profile' %}
 
-            <div class="mx-3 text-truncate title-container">
+            <div class="mx-3 text-truncate container-fluid">
                 {{ book.title }}
             </div>
         </div>
