--- a/lexiflux/templates/hamburger.html
+++ b/lexiflux/templates/hamburger.html
@@ -1,18 +1,10 @@
-<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
     <span class="navbar-toggler-icon"></span>
-</button>
-
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle {% if current_page == 'profile' %}text-secondary{% endif %}" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                &#9776; <!-- Hamburger Icon -->
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item {% if current_page == 'profile' %}text-secondary{% endif %}" href="{% url 'profile' %}">Profile</a></li>
-                <li><a class="dropdown-item {% if current_page == 'library' %}text-secondary{% endif %}" href="{% url 'library' %}">Library</a></li>
-                <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'reader' %}">Book</a></li>
-            </ul>
-        </li>
-    </ul>
+  </button>
+  <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    <li><a class="dropdown-item {% if current_page == 'profile' %}text-secondary{% endif %}" href="{% url 'profile' %}">Profile</a></li>
+    <li><a class="dropdown-item {% if current_page == 'library' %}text-secondary{% endif %}" href="{% url 'library' %}">Library</a></li>
+    <li><a class="dropdown-item {% if current_page == 'reader' %}text-secondary{% endif %}" href="{% url 'reader' %}">Reader</a></li>
+  </ul>
 </div>
