trash all complicated viewport code and use .scrollTop

--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -18,8 +18,11 @@
         </div>
     </nav>
 
-    <div id="words-container" class="container-fluid flex-grow-1 overflow-hidden">
-        ???
+    <div id="book-page-scroller" class="container-fluid flex-grow-1 overflow-hidden">
+        <!-- book-page-scroller let us scroll word-container inside it -->
+        <div id="words-container">
+            ???
+        </div>
     </div>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-between navbar-fixed-bottom">
