detect first word

--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -1,6 +1,6 @@
 <div id="book" class="d-flex flex-column vh-100">
 
-    <nav class="navbar navbar-light bg-light">
+    <nav id="top-navbar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             {% include 'hamburger.html' with current_page='reader' %}
             <div class="text-truncate">
