https://github.com/andgineer/lexiflux/issues/9 shift viewports by screen height - line height rename page to book-page restore switching between book pages

--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -42,7 +42,7 @@
         </style>
     </head>
     <body data-book-id="{{ book.id }}"
-          data-page-number="{{ page.number }}">
+          data-book-page-number="{{ page.number }}">
 
         {% block content %}{% endblock %}
 
