fully rewritten page rendering to move most of the code to Python side

--- a/lexiflux/templates/page.html
+++ b/lexiflux/templates/page.html
@@ -21,7 +21,7 @@
     <div id="book-page-scroller" class="container-fluid flex-grow-1 overflow-hidden">
         <!-- book-page-scroller let us scroll word-container inside it -->
         <div id="words-container">
-            ???
+            {{ pageHtml|safe }}
         </div>
     </div>
 
