normalized backend API

--- a/lexiflux/templates/base.html
+++ b/lexiflux/templates/base.html
@@ -41,7 +41,7 @@
             }
         </style>
     </head>
-    <body data-book-id="{{ book.id }}"
+    <body data-book-code="{{ book.code }}"
           data-book-page-number="{{ page.number }}">
 
         {% block content %}{% endblock %}
