--- a/lexiflux/templates/library.html
+++ b/lexiflux/templates/library.html
@@ -23,8 +23,8 @@
                 <div class="list-group">
                        {% for book in books %}
                             <div class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
-                                <a href="{% url 'read_the_book' book.code %}">{{ book.title }} by {{ book.author.name }}</a>
-                                <button onclick="location.href='{% url 'book' %}?book-id={{ book.id }}'" class="btn btn-secondary">
+                                <a href="{% url 'reader' %}?book-code={{ book.code }}">{{ book.title }} by {{ book.author.name }}</a>
+                                <button onclick="location.href='{% url 'book' %}?book-code={{ book.code }}'" class="btn btn-secondary">
                                     <i class="bi bi-gear-fill"></i>
                                 </button>
                             </div>
